Start of main page.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'Back', posts_path %>
-
-<%=raw @post.text %>
+<div class="container mt-3">
+  <div class="row">
+    <%=raw @post.text %>    
+  </div>
+</div>
