--- a/app/views/posts/about.html.erb
+++ b/app/views/posts/about.html.erb
@@ -1,14 +1,27 @@
-<div class="container mt-3">
-  <div class="row">
-    <div class="col-md-4 text-center">
-      <%= image_tag ("avatar.png"), class: "rounded" %>
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="masthead mb-auto">
+    <div class="inner">
+      <h3 class="masthead-brand"><%=raw @post.title %></h3>
+      <nav class="nav nav-masthead justify-content-center">
+        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Contact</a>
+      </nav>
     </div>
-    <div class="col-md-8">
-      <h1>Title</h1>
-      <%=raw @post.intro %>
+  </header>
+  <div class="container mt-4">
+    <div class="row">
+      <div class="col-sm-3 text-center">
+        <%= image_tag ("avatar.png"), size: "150x150", class: "rounded" %>
+      </div>
+      <div class="col-sm-9">
+        <h1><%=raw @post.title %></h1>
+        <%=raw @post.intro %>
+      </div>
     </div>
   </div>
-  <div class="row">
+  <div class="container mt-4">
     <%=raw @post.text %>
-</div>
+  </div>
+  <%= render "layouts/footer" %>
 </div>
