--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer class="mastfoot mt-auto">
+<footer class="mastfoot mt-auto text-center">
   <div class="inner">
-    <p>&copy; 2019 <a href="https://voevodin-yura.com/">Yura Voevodin</a></p>
+    <p>&copy; 2019 <a href="https://voevodin-yura.com/">Юра Воєводін</a></p>
   </div>
 </footer>
