--- a/app/views/posts/about.html.erb
+++ b/app/views/posts/about.html.erb
@@ -1,13 +1,4 @@
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="masthead mb-auto">
-    <div class="inner">
-      <h3 class="masthead-brand"><%=raw @post.title %></h3>
-      <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Contact</a>
-      </nav>
-    </div>
+<div class="cover-container w-100 h-100 p-3 mx-auto flex-column">
   </header>
   <div class="container mt-4">
     <div class="row">
@@ -15,7 +6,7 @@
         <%= image_tag ("avatar.png"), size: "150x150", class: "rounded" %>
       </div>
       <div class="col-sm-9">
-        <h1><%=raw @post.title %></h1>
+		<h3><%=raw @post.title %></h3>
         <%=raw @post.intro %>
       </div>
     </div>
