Contact and Projects page.

--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -3,9 +3,9 @@
     <div class="inner">
       <h3 class="masthead-brand">Yura Voevodin</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">Home</a>
-        <a class="nav-link" href="#">Projects</a>
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link active" href="/">Home</a>
+        <a class="nav-link" href="/projects">Projects</a>
+        <a class="nav-link" href="/contact">Contact</a>
       </nav>
     </div>
   </div>
@@ -21,13 +21,6 @@
     </div>
   </div>
   <div class="container mt-4">
-    <h3>👨‍💻 Open-source projects</h3>
-    <ul>
-      <li><a href="https://github.com/yura-voevodin/Breaks">My Breaks</a> - iOS app for more productive work with breaks</li>
-      <li><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058">My University</a> - iOS app with schedule for universities</li>
-      <li><a href="https://github.com/yura-voevodin/bot-schedule">My University</a> - <a href="https://telegram.me/sumdu_bot">Telegram</a> bot with schedule for universities</li>
-      <li><a href="https://github.com/yura-voevodin/personal-website-on-swift">This website</a> - Personal website on <a href="https://vapor.codes">Vapor</a> framework</li>
-    </ul>
     <h3>👔 Experience</h3>
     <ul>
       <li><a href="https://www.appdev.academy">App Dev Academy</a> - iOS and macOS apps developer, 2016 - now</li>
@@ -39,12 +32,6 @@
     <ul>
       <li><a href="http://sumdu.edu.ua/int/en/">Sumy State University</a> - Computer science, Bachelor, 2012</li>
       <li><a href="http://kpt.sumdu.edu.ua/en/index.php">Polytechnic College of Konotop Institute of the SSU</a> - Service of computer and intellectual systems and networks, Junior Specialist, 2009</li>
-    </ul>
-    <h3>✉️ Contacts</h3>
-    <ul>
-      <li>Mail me <a href="mailto:voevodin.yura@icloud.com">voevodin.yura@icloud.com</a></li>
-      <li>Facebook <a href="https://www.facebook.com/yura.voevodin">yura.voevodin</a></li>
-      <li>Github <a href="https://github.com/yura-voevodin">yura-voevodin</a></li>
     </ul>
   </div>
   <%= render "layouts/footer" %>
