--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <footer class="mastfoot mt-auto text-center">
   <div class="inner">
+    <p><a href="/ua">Ukrainian version</a></p>
     <p>&copy; 2019 <a href="https://voevodin-yura.com/">Yura Voevodin</a></p>
   </div>
 </footer>
