--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -1,27 +1,20 @@
-<div class="cover-container w-100 h-100 p-3 mx-auto flex-column">
-  <div class="container mt-4">
-    <div class="inner">
-      <h3 class="masthead-brand">Yura Voevodin</h3>
-      <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link" href="/">Home</a>
-        <a class="nav-link active" href="/projects">Projects</a>
-        <a class="nav-link" href="/contact">Contact</a>
-      </nav>
-    </div>
-  </div>
-  <div class="container mt-4">
-    <div class="row">
-      <div class="column">
-        <h3>👨‍💻 Open-source projects</h3>
-        <ul>
-          <li><a href="https://github.com/yura-voevodin/Breaks">My Breaks</a> - iOS app for more productive work with breaks</li>
-          <li><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058">My University</a> - iOS app with schedule for universities</li>
-          <li><a href="https://github.com/yura-voevodin/bot-schedule">My University</a> - <a href="https://telegram.me/sumdu_bot">Telegram</a> bot with schedule for universities</li>
-          <li><a href="https://github.com/yura-voevodin/personal-website-on-swift">This website</a> - Personal website on <a href="https://vapor.codes">Vapor</a> framework</li>
-        </ul>
+<%= render "layouts/header" %>
+
+<div class="container-lg clearfix">
+  <div class="mx-3 my-3">
+    <div class="col-12 pt-3 mx-3">
+      <div class="pagehead">
+        <h1><%= octicon "tools", class: "mr-2", height: 32 %> Projects</h1>
+        <hr>
       </div>
+      <ul>
+        <li><a href="https://my-university.com.ua">My University</a> - Web service with schedule for universities</li>
+        <li><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058">My University</a> - iOS app with schedule for universities</li>
+        <li><a href="https://github.com/yura-voevodin/Breaks">My Breaks</a> - iOS app for more productive work with breaks</li>
+        <li><a href="https://github.com/yura-voevodin/blog-rails">This website</a> - Personal website on <a href="https://rubyonrails.org">Rails</a> framework</li>
+      </ul>
     </div>
-    
   </div>
-  <%= render "layouts/footer" %>
 </div>
+
+<%= render "layouts/footer" %>
