--- a/app/views/main/ua.html.erb
+++ b/app/views/main/ua.html.erb
@@ -1,3 +1,21 @@
+<div class="Header">
+  <div class="Header-item">
+    <a href="/ua" class="Header-link f4 d-flex flex-items-center">
+      <%= octicon "home", class: "mr-2", height: 32 %>
+    </a>
+  </div>
+  <div class="Header-item">
+    <a href="/projects" class="Header-link">Проекти</a>
+  </div>
+  <div class="Header-item">
+    <a href="/contact" class="Header-link">Контакти</a>
+  </div>
+  <div class="Header-item Header-item--full"></div>
+  <div class="Header-item mr-0">
+    <a href="/">🇺🇸</a>
+  </div>
+</div>
+
 <div class="cover-container w-100 h-100 p-3 mx-auto flex-column">
   <div class="container mt-4">
     <div class="inner">
