--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,29 @@
 
 @import "@primer/css/index.scss";
 
+html {
+  color-scheme: light dark;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+      color: inherit;
+      background-color: rgb(22, 23, 22);
+    }
+
+    .Header {
+      background-color: hsl(203.6, 100%, 12%);
+    }
+
+    .text-normal, .text-gray {
+      color: rgb(142, 142, 147);
+    }
+
+    a {
+      color: rgb(102, 187, 255);
+    }
+}
+
 html{ height:100%; }
 body{ min-height:100%; padding:0; margin:0; position:relative; }
 
