More adjustment in styles for Dark Mode.

--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -9,9 +9,9 @@
         <%= image_tag ("avatar.png"), class: "width-full avatar" %>
       </div>
       <div class="col-10 d-table-cell v-align-middle pl-4">
-        <h1 class="text-normal lh-condensed mb-2">Yura Voevodin</h1>
-        <p class="h4 text-gray text-normal mb-2">Experienced software engineer with strong background in web technologies</p>
-        <p class="h4 text-gray text-normal mb-2">Enthusiast and dreamer from <a href="https://en.wikipedia.org/wiki/Ukraine">Ukraine</a> 🇺🇦</p>
+        <h1 class="lh-condensed mb-2">Yura Voevodin</h1>
+        <p class="h4 text-normal mb-2">Experienced software engineer with strong background in web technologies</p>
+        <p class="h4 text-normal mb-2">Enthusiast and dreamer from <a href="https://en.wikipedia.org/wiki/Ukraine">Ukraine</a> 🇺🇦</p>
       </div>
     </div>
 
