--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,20 +22,19 @@ html {
 
 @media (prefers-color-scheme: dark) {
     body {
-      color: inherit;
+      color: rgb(215, 215, 216);
       background-color: rgb(22, 23, 22);
     }
 
-    .Header {
-      background-color: hsl(203.6, 100%, 12%);
-    }
+    .Header { background-color: hsl(203.6, 100%, 12%); }
 
-    .text-normal, .text-gray {
-      color: rgb(142, 142, 147);
-    }
+    a { color: rgb(102, 187, 255); }
 
-    a {
-      color: rgb(102, 187, 255);
+    img { opacity: .75;
+      transition: opacity .5s ease-in-out;
+    }
+    img:hover {
+      opacity: 1;
     }
 }
 
