--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -3,16 +3,35 @@
 <div class="container-lg clearfix">
   <div class="mx-3 my-3">
     <div class="col-12 pt-3 mx-3">
+
       <div class="pagehead">
         <h1><%= octicon "tools", class: "mr-2", height: 32 %> Projects</h1>
         <hr>
       </div>
-      <ul>
-        <li><a href="https://my-university.com.ua">My University</a> - Web service with schedule for universities</li>
-        <li><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058">My University</a> - iOS app with schedule for universities</li>
-        <li><a href="https://github.com/yura-voevodin/Breaks">My Breaks</a> - iOS app for more productive work with breaks</li>
-        <li><a href="https://github.com/yura-voevodin/blog-rails">This website</a> - Personal website on <a href="https://rubyonrails.org">Rails</a> framework</li>
-      </ul>
+
+      <div class="clearfix p-3">
+        <div class="float-left p-3 mr-3">
+          <%= image_tag ("my-university.png"), :size => "64x64" %>
+        </div>
+        <div class="overflow-hidden">
+          <h3><a href="https://my-university.com.ua">My University</a></h3>
+          <p>Web service and API on <a href="https://rubyonrails.org">Rails</a> framework with schedule for universities.</p>
+          <ul>
+            <li><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058">iOS</a> app with schedule for universities</li>
+            <li><a href="https://play.google.com/store/apps/details?id=ua.com.myuniversity">Android</a> app with schedule for universities</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="clearfix p-3">
+        <div class="float-left p-3 mr-3">
+          <%= octicon "browser", height: 64, width: 64 %>
+        </div>
+        <div class="overflow-hidden">
+          <h3><a href="https://github.com/yura-voevodin/blog-rails">Personal  website</a></h3>
+          <p>Website on <a href="https://rubyonrails.org">Rails</a> framework and <a href="https://primer.style/css/">Primer CSS</a></p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
