Title, Description and Keywords.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <meta name="description" content="<%= yield_meta_tag(:description, 'Yura Voevodin Personal Website') %>" />
+	<meta name="keywords" content="<%= yield_meta_tag(:keywords, 'iOS,iPadOS,macOS,tvOS,iPhone,iPad,iMac,MacBook,Developer,Swift') %>" />
 
   <title><%= @title %></title>
   <%= csrf_meta_tags %>
