--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -37,6 +37,21 @@
         <li><a href="http://kpt.sumdu.edu.ua/en/index.php">Polytechnic College of Konotop Institute of the SSU</a> - Service of computer and intellectual systems and networks, Junior Specialist, 2009</li>
       </ul>
     </div>
+
+    <div class="col-12 pt-3 mx-3">
+      <div class="Subhead">
+        <div class="Subhead-heading"><%= octicon "mail", class: "mr-2", height: 28 %>Contacts</div>
+      </div>
+      <ul>
+        <li>Twitter <a href="https://twitter.com/voevodin_yura">@voevodin_yura</a></li>
+        <li>Instagram <a href="https://www.instagram.com/voevodin.yura/">@voevodin.yura</a></li>
+        <li>Facebook <a href="https://www.facebook.com/yura.voevodin">yura.voevodin</a></li>
+        <li>Telegram <a href="https://t.me/voevodin_yura">@voevodin_yura</a></li>
+        <li>Github <a href="https://github.com/yura-voevodin">yura-voevodin</a></li>
+        <li>Mail me <a href="mailto:voevodin.yura@icloud.com">voevodin.yura@icloud.com</a></li>
+      </ul>
+    </div>
+
   </div>
 </div>
 
