--- a/app/views/layouts/_header_ua.html.erb
+++ b/app/views/layouts/_header_ua.html.erb
@@ -5,6 +5,6 @@
     <% end %>
   </div>
   <div class="Header-item">
-    <a href="/projects" class="Header-link">Projects</a>
+    <a href="/projects" class="Header-link">Проекти</a>
   </div>
 </div>
