--- a/app/views/main/ua.html.erb
+++ b/app/views/main/ua.html.erb
@@ -1,70 +1,58 @@
-<div class="Header">
-  <div class="Header-item">
-    <a href="/ua" class="Header-link f4 d-flex flex-items-center">
-      <%= octicon "home", class: "mr-2", height: 32 %>
-    </a>
-  </div>
-  <div class="Header-item">
-    <a href="/projects" class="Header-link">Проекти</a>
-  </div>
-  <div class="Header-item">
-    <a href="/contact" class="Header-link">Контакти</a>
-  </div>
-  <div class="Header-item Header-item--full"></div>
-  <div class="Header-item mr-0">
-    <a href="/">🇺🇸</a>
+<% @title = "Юра Воєводін" %>
+<%= render "layouts/header_ua" %>
+
+<div class="container-lg clearfix">
+
+  <div class="mx-3 my-3">
+
+    <div class="d-table col-12">
+      <div class="col-2 d-table-cell v-align-middle">
+        <%= image_tag ("avatar.png"), class: "width-full avatar" %>
+      </div>
+      <div class="col-10 d-table-cell v-align-middle pl-4">
+        <h1 class="lh-condensed mb-2">Юра Воєводін</h1>
+        <p class="h4 text-normal mb-2">Досвідчений розробник програмного забезпечення зі знаннями в області веб-технологій</p>
+        <p class="h4 text-normal mb-2">Ентузіаст та мрійник з <a href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0">України</a> 🇺🇦</p>
+      </div>
+    </div>
+
+    <div class="col-12 pt-3 mx-3">
+      <div class="Subhead">
+        <div class="Subhead-heading"><%= octicon "rocket", class: "mr-2", height: 28 %> Досвід</div>
+      </div>
+      <ul>
+        <li><a href="https://www.appdev.academy">App Dev Academy</a> - Розробник застосунків для <a href="https://uk.wikipedia.org/wiki/IOS">iOS</a> та <a href="https://uk.wikipedia.org/wiki/MacOS_x">macOS</a>, 2016 - до сьогодні</li>
+        <li><a href="http://bvblogic.com">bvblogic</a> - <a href="https://uk.wikipedia.org/wiki/PHP">PHP</a> розробник, 2012 - 2016</li>
+        <li><a href="http://dl.sumdu.edu.ua/uk/">Лабораторія дистанційного навчання Сумського державного університету</a> - Старший лаборант, 2012 - 2013</li>
+        <li><a href="http://kpt.sumdu.edu.ua/">Політехнічний технікум Конотопського інституту СумДУ</a> - Лаборант, 2007 - 2008</li>
+      </ul>
+    </div>
+
+    <div class="col-12 pt-3 mx-3">
+      <div class="Subhead">
+        <div class="Subhead-heading"><%= octicon "mortar-board", class: "mr-2", height: 28 %>Освіта</div>
+      </div>
+      <ul>
+        <li><a href="http://sumdu.edu.ua/ukr/">Сумський державний університет</a> - Інформатика, Бакалавр, 2012</li>
+        <li><a href="http://kpt.sumdu.edu.ua">Політехнічний технікум Конотопського інституту СумДУ</a> - Обслуговування комп'ютерних та інтелектуальних систем і мереж, <a href="https://uk.wikipedia.org/wiki/%D0%9C%D0%BE%D0%BB%D0%BE%D0%B4%D1%88%D0%B8%D0%B9_%D1%81%D0%BF%D0%B5%D1%86%D1%96%D0%B0%D0%BB%D1%96%D1%81%D1%82">Молодший спеціаліст</a>, 2009</li>
+      </ul>
+    </div>
+
+    <div class="col-12 pt-3 mx-3">
+      <div class="Subhead">
+        <div class="Subhead-heading"><%= octicon "mail", class: "mr-2", height: 28 %>Контакти</div>
+      </div>
+      <ul>
+        <li>Twitter <a href="https://twitter.com/voevodin_yura">@voevodin_yura</a></li>
+        <li>Instagram <a href="https://www.instagram.com/voevodin.yura/">@voevodin.yura</a></li>
+        <li>Facebook <a href="https://www.facebook.com/yura.voevodin">yura.voevodin</a></li>
+        <li>Telegram <a href="https://t.me/voevodin_yura">@voevodin_yura</a></li>
+        <li>Github <a href="https://github.com/yura-voevodin">yura-voevodin</a></li>
+        <li>Пишіть мені <a href="mailto:voevodin.yura@icloud.com">voevodin.yura@icloud.com</a></li>
+      </ul>
+    </div>
+
   </div>
 </div>
 
-<div class="cover-container w-100 h-100 p-3 mx-auto flex-column">
-  <div class="container mt-4">
-    <div class="inner">
-      <h3 class="masthead-brand">Юра Воєводін</h3>
-      <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="/">Головна</a>
-        <a class="nav-link" href="/projects">Проекти</a>
-        <a class="nav-link" href="/contact">Контакти</a>
-      </nav>
-    </div>
-  </div>
-  <div class="container mt-4">
-    <div class="row">
-      <div class="col-sm-3 text-center">
-        <%= image_tag ("avatar.png"), size: "150x150", class: "rounded" %>
-      </div>
-      <div class="col-sm-9 mt-4">
-        <p>Досвідчений розробник iOS застосунків з досвідом в області веб-технологій</p>
-        <p>Ентузіаст та мрійник з <a href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0">України</a> 🇺🇦</p>
-      </div>
-    </div>
-  </div>
-  <div class="container mt-4">
-    <h3>👨‍💻 Проекти з відкритим кодом</h3>
-    <ul>
-      <li><a href="https://github.com/yura-voevodin/Breaks">My Breaks</a> - iOS застосунок для більш продуктивної роботи з перервами</li>
-      <li><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058">Мій Універ</a> - iOS застосунок для перегляду розкладу занять в  університетах</li>
-      <li><a href="https://github.com/yura-voevodin/bot-schedule">Мій Універ</a> - Бот <a href="https://telegram.me/sumdu_bot">Telegram</a> для перегляду розкладу занять в  університетах</li>
-      <li><a href="https://github.com/yura-voevodin/personal-website-on-swift">Цей веб-сайт</a> - Персональний сайт на фреймворку <a href="https://vapor.codes">Vapor</a></li>
-    </ul>
-    <h3>👔 Досвід</h3>
-    <ul>
-      <li><a href="https://www.appdev.academy">App Dev Academy</a> - Розробник застосунків для <a href="https://uk.wikipedia.org/wiki/IOS">iOS</a> та <a href="https://uk.wikipedia.org/wiki/MacOS_x">macOS</a>, 2016 - до сьогодні</li>
-      <li><a href="http://bvblogic.com/ua/">bvblogic</a> - <a href="https://uk.wikipedia.org/wiki/PHP">PHP</a> розробник, 2012 - 2016</li>
-      <li><a href="http://dl.sumdu.edu.ua/ua/">Лабораторія дистанційного навчання Сумського державного університету</a> - Старший лаборант, 2012 - 2013</li>
-      <li><a href="http://kpt.sumdu.edu.ua">Політехнічний технікум Конотопського інституту СумДУ</a> - Лаборант, 2007 - 2008</li>
-    </ul>
-    <h3>🎓 Освіта</h3>
-    <ul>
-      <li><a href="http://sumdu.edu.ua/ukr/">Сумський державний університет</a> - Інформатика, Бакалавр, 2012</li>
-      <li><a href="http://kpt.sumdu.edu.ua">Політехнічний технікум Конотопського інституту СумДУ</a> - Обслуговування комп'ютерних та інтелектуальних систем і мереж, <a href="https://uk.wikipedia.org/wiki/%D0%9C%D0%BE%D0%BB%D0%BE%D0%B4%D1%88%D0%B8%D0%B9_%D1%81%D0%BF%D0%B5%D1%86%D1%96%D0%B0%D0%BB%D1%96%D1%81%D1%82">Молодший спеціаліст</a>, 2009</li>
-    </ul>
-    <h3>✉️ Контакти</h3>
-    <ul>
-      <li>Пишіть мені <a href="mailto:voevodin.yura@icloud.com">voevodin.yura@icloud.com</a></li>
-      <li>Facebook <a href="https://www.facebook.com/yura.voevodin">yura.voevodin</a></li>
-      <li>Github <a href="https://github.com/yura-voevodin">yura-voevodin</a></li>
-      <li>Twitter <a href="https://twitter.com/voevodin_yura">Yura Voevodin</a></li>
-    </ul>
-  </div>
-  <%= render "layouts/footer_ua" %>
-</div>
+<%= render "layouts/footer" %>
