Update to Ruby 2.7.0

--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -43,6 +43,8 @@
         <div class="Subhead-heading"><%= octicon "mail", class: "mr-2", height: 28 %>Contacts</div>
       </div>
       <ul>
+        <li>LinkedIn <a href="https://www.linkedin.com/in/yurivoevodin/">yurivoevodin</a></li>
+        <li>Upwork <a href="https://www.upwork.com/freelancers/~01f49c60721b71f48b">Yura V.</a></li>
         <li>Twitter <a href="https://twitter.com/voevodin_yura">@voevodin_yura</a></li>
         <li>Instagram <a href="https://www.instagram.com/voevodin.yura/">@voevodin.yura</a></li>
         <li>Facebook <a href="https://www.facebook.com/yura.voevodin">yura.voevodin</a></li>
