--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -12,7 +12,7 @@
 
       <div class="clearfix p-3">
         <div class="float-left p-3 mr-3">
-          <%= image_tag ("my-university.png"), :size => "64x64" %>
+          <%= image_tag ("my-university.png"), :size => "64x64", :class => "avatar" %>
         </div>
         <div class="overflow-hidden">
           <h3>My University</h3>
