--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,1 @@
-<footer id="footer" class="pt-2 pb-3 text-center"><p>&copy; 2019 <a href="https://voevodin-yura.com/">Yura Voevodin</a></p></footer>
+<footer id="footer" class="pt-2 pb-3 text-center"><p>&copy; 2019-2020 <a href="https://voevodin-yura.com/">Yura Voevodin</a></p></footer>
