Update icon of "My University" project

--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -17,9 +17,9 @@
         <div class="overflow-hidden">
           <h3>My University</h3>
           <ul>
-            <li><a href="https://my-university.com.ua">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org">Rails</a> framework with schedule for universities.</li>
-            <li><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058">My University</a> - iOS app with schedule for universities.</li>
-            <li><a href="https://play.google.com/store/apps/details?id=ua.com.myuniversity">My University</a> - Android app with schedule for universities.</li>
+            <li><a href="https://my-university.com.ua">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org">Rails</a> framework with schedule for universities</li>
+            <li><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058">My University</a> - iOS app with schedule for universities</li>
+            <li><a href="https://play.google.com/store/apps/details?id=ua.com.myuniversity">My University</a> - Android app with schedule for universities</li>
           </ul>
         </div>
       </div>
@@ -30,7 +30,7 @@
         </div>
         <div class="overflow-hidden">
           <h3>Personal  website</h3>
-          <p><a href="http://voevodin-yura.com/">voevodin-yura.com</a> - website on <a href="https://rubyonrails.org">Rails</a> framework and <a href="https://primer.style/css/">Primer CSS</a>.</p>
+          <p><a href="http://voevodin-yura.com/">voevodin-yura.com</a> - website on <a href="https://rubyonrails.org">Rails</a> framework and <a href="https://primer.style/css/">Primer CSS</a></p>
           <p>Source code on GitHub - <a href="https://github.com/yura-voevodin/blog-rails">blog-rails</a></p>
         </div>
       </div>
