--- a/app/views/main/ua.html.erb
+++ b/app/views/main/ua.html.erb
@@ -21,7 +21,8 @@
         <div class="Subhead-heading"><%= octicon "rocket", class: "mr-2", height: 28 %> Досвід</div>
       </div>
       <ul>
-        <li><a href="https://www.appdev.academy">App Dev Academy</a> - Розробник застосунків для <a href="https://uk.wikipedia.org/wiki/IOS">iOS</a> та <a href="https://uk.wikipedia.org/wiki/MacOS_x">macOS</a>, 2016 - до сьогодні</li>
+        <li><a href="https://www.clowder.com">Clowder</a> - iOS Engineer, 2020 - до сьогодні</li>
+        <li><a href="https://www.appdev.academy">App Dev Academy</a> - Розробник застосунків для <a href="https://uk.wikipedia.org/wiki/IOS">iOS</a> та <a href="https://uk.wikipedia.org/wiki/MacOS_x">macOS</a>, 2016 - 2020</li>
         <li><a href="http://bvblogic.com">bvblogic</a> - <a href="https://uk.wikipedia.org/wiki/PHP">PHP</a> розробник, 2012 - 2016</li>
         <li><a href="http://dl.sumdu.edu.ua/uk/">Лабораторія дистанційного навчання Сумського державного університету</a> - Старший лаборант, 2012 - 2013</li>
         <li><a href="http://kpt.sumdu.edu.ua/">Політехнічний технікум Конотопського інституту СумДУ</a> - Лаборант, 2007 - 2008</li>
