--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -17,11 +17,10 @@
     </div>
 
     <div class="col-12 pt-3 mx-3">
-      <div class="Subhead-heading pb-1"><%= octicon "rocket", class: "mr-2", height: 28 %> Experience</div>
+      <div class="Subhead-heading pb-1">Experience</div>
 
       <div class="TimelineItem">
         <div class="TimelineItem-badge">
-          <%= octicon("home") %>
         </div>
         <div class="TimelineItem-body">
           iOS Engineer at
@@ -32,7 +31,6 @@
 
       <div class="TimelineItem">
         <div class="TimelineItem-badge">
-          <%= octicon("octoface") %>
         </div>
         <div class="TimelineItem-body">
           iOS, iPadOS and macOS Apps Developer at
@@ -43,7 +41,6 @@
 
       <div class="TimelineItem">
         <div class="TimelineItem-badge">
-          <%= octicon("globe") %>
         </div>
         <div class="TimelineItem-body">
           PHP Developer at
@@ -54,7 +51,6 @@
 
       <div class="TimelineItem">
         <div class="TimelineItem-badge">
-          <%= octicon("check-circle") %>
         </div>
         <div class="TimelineItem-body">
           Senior Laboratory at
@@ -65,7 +61,6 @@
 
       <div class="TimelineItem">
         <div class="TimelineItem-badge">
-          <%= octicon("check-circle") %>
         </div>
         <div class="TimelineItem-body">
           Laboratory Technician at
@@ -78,11 +73,10 @@
     </div>
 
     <div class="col-12 pt-3 mx-3">
-      <div class="Subhead-heading pb-1"><%= octicon "mortar-board", class: "mr-2", height: 28 %>Education</div>
+      <div class="Subhead-heading pb-1">Education</div>
 
       <div class="TimelineItem">
         <div class="TimelineItem-badge">
-          <%= octicon("check-circle") %>
         </div>
         <div class="TimelineItem-body">
           Bachelor of Computer Science at <a href="https://sumdu.edu.ua/int/en/" class="text-bold">Sumy State University</a>, 2012
@@ -91,7 +85,6 @@
 
       <div class="TimelineItem">
         <div class="TimelineItem-badge">
-          <%= octicon("check-circle") %>
         </div>
         <div class="TimelineItem-body">
           Junior Specialist, Service of computer and intellectual systems and networks <br> at <a href="https://kpt.sumdu.edu.ua" class="text-bold">Polytechnic College of Konotop Institute of the SSU</a>, 2009
@@ -102,7 +95,7 @@
     </div>
 
     <div class="col-12 pt-3 mx-3">
-      <div class="Subhead-heading pb-1"><%= octicon "mail", class: "mr-2", height: 28 %>Contacts</div>
+      <div class="Subhead-heading pb-1">Contacts</div>
       <div class="ml-3">
         <ul>
         <li>LinkedIn <a href="https://www.linkedin.com/in/yurivoevodin/">yurivoevodin</a></li>
