--- a/app/views/main/ua.html.erb
+++ b/app/views/main/ua.html.erb
@@ -18,7 +18,7 @@
 
     <div class="col-12 pt-3 mx-3">
       <div class="Subhead">
-        <div class="Subhead-heading"><%= octicon "rocket", class: "mr-2", height: 28 %> Досвід</div>
+        <div class="Subhead-heading">Досвід</div>
       </div>
       <ul>
         <li><a href="https://www.clowder.com">Clowder</a> - iOS Engineer, 2020 - до сьогодні</li>
@@ -31,7 +31,7 @@
 
     <div class="col-12 pt-3 mx-3">
       <div class="Subhead">
-        <div class="Subhead-heading"><%= octicon "mortar-board", class: "mr-2", height: 28 %>Освіта</div>
+        <div class="Subhead-heading">Освіта</div>
       </div>
       <ul>
         <li><a href="http://sumdu.edu.ua/ukr/">Сумський державний університет</a> - Інформатика, Бакалавр, 2012</li>
@@ -41,7 +41,7 @@
 
     <div class="col-12 pt-3 mx-3">
       <div class="Subhead">
-        <div class="Subhead-heading"><%= octicon "mail", class: "mr-2", height: 28 %>Контакти</div>
+        <div class="Subhead-heading">Контакти</div>
       </div>
       <ul>
         <li>LinkedIn <a href="https://www.linkedin.com/in/yurivoevodin/">yurivoevodin</a></li>
