--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -6,7 +6,7 @@
     <div class="col-12 pt-3 mx-3">
 
       <div class="pagehead">
-        <h1><%= octicon "tools", class: "mr-2", height: 32 %>My Projects</h1>
+        <h1>My Projects</h1>
       </div>
 
       <div class="clearfix pt-3">
