--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-<footer id="footer" class="pt-2 pb-3 text-center">
-  <p>2019-2021</p>
+<footer class="pt-5 my-5 text-muted border-top">
+	Created by Yura Voevodin &middot; &copy; 2019-2021
 </footer>
