--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,13 @@
-<div class="Header">
-  <div class="Header-item">
-    <%= link_to(root_url, class: "Header-link f4 d-flex flex-items-center") do %>
-    <% end %>
-  </div>
-  <div class="Header-item">
-    <a href="/projects" class="Header-link">My Projects</a>
-  </div>
+<div class="container">
+  <header class="d-flex justify-content-center py-3">
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+	    <%= link_to(root_url, class: "nav-link active") do %>
+		Home
+	    <% end %>
+	  </li>
+      <li class="nav-item"><a href="/projects" class="nav-link">Projects</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+    </ul>
+  </header>
 </div>
