--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -1,115 +1,17 @@
 <% @title = "Yura Voevodin" %>
 <%= render "layouts/header" %>
 
-<div class="container-lg clearfix">
-
-  <div class="mx-3 my-3">
-
-    <div class="d-table col-12">
-      <div class="col-10 d-table-cell v-align-middle pl-4">
-        <h1 class="lh-condensed mb-2">Yura Voevodin</h1>
-        <p class="h4 text-normal mb-2">Experienced software engineer with strong background in web technologies</p>
-        <p class="h4 text-normal mb-2">Enthusiast and dreamer from <a href="https://en.wikipedia.org/wiki/Ukraine" class="text-bold">Ukraine</a> 🇺🇦</p>
-      </div>
-      <div class="col-2 d-table-cell v-align-middle">
-        <%= image_tag ("avatar.png"), class: "width-full avatar" %>
-      </div>
+<div class="container py-4">
+    <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="container-fluid py-5">
+            <h1 class="display-5 fw-bold">Yura Voevodin</h1>
+            <%= image_tag ("avatar.png"), class: "mx-auto rounded float-end m-2", height: '100', width: '100' %>
+            <p class="col-md-8 fs-5">Experienced software engineer with strong background in web technologies. Enthusiast and dreamer from <a href="https://en.wikipedia.org/wiki/Ukraine" class="text-bold">Ukraine</a> 🇺🇦</p>
+            <a href="/about" class="btn btn-primary btn-lg">Read more</a>
+        </div>
     </div>
 
-    <div class="col-12 pt-3 mx-3">
-      <div class="Subhead-heading pb-1">Experience</div>
-
-      <div class="TimelineItem">
-        <div class="TimelineItem-badge">
-        </div>
-        <div class="TimelineItem-body">
-          iOS Engineer at
-          <a href="https://www.clowder.com" class="text-bold">Clowder</a>,
-          2020 - now
-        </div>
-      </div>
-
-      <div class="TimelineItem">
-        <div class="TimelineItem-badge">
-        </div>
-        <div class="TimelineItem-body">
-          iOS, iPadOS and macOS Apps Developer at
-          <a href="https://www.appdev.academy" class="text-bold">App Dev Academy</a>,
-          2016 - 2020
-        </div>
-      </div>
-
-      <div class="TimelineItem">
-        <div class="TimelineItem-badge">
-        </div>
-        <div class="TimelineItem-body">
-          PHP Developer at
-          <a href="https://bvblogic.com" class="text-bold">bvblogic</a>,
-          2012 - 2016
-        </div>
-      </div>
-
-      <div class="TimelineItem">
-        <div class="TimelineItem-badge">
-        </div>
-        <div class="TimelineItem-body">
-          Senior Laboratory at
-          <a href="https://dl.sumdu.edu.ua/en" class="text-bold">Laboratory of distance learning at SSU</a>,
-          2012 - 2013
-        </div>
-      </div>
-
-      <div class="TimelineItem">
-        <div class="TimelineItem-badge">
-        </div>
-        <div class="TimelineItem-body">
-          Laboratory Technician at
-          <a href="https://kpt.sumdu.edu.ua" class="text-bold">Polytechnic College of Konotop Institute of the SSU</a>,
-          2007 - 2008
-        </div>
-      </div>
-
-      <div class="TimelineItem-break ml-0"></div>
-    </div>
-
-    <div class="col-12 pt-3 mx-3">
-      <div class="Subhead-heading pb-1">Education</div>
-
-      <div class="TimelineItem">
-        <div class="TimelineItem-badge">
-        </div>
-        <div class="TimelineItem-body">
-          Bachelor of Computer Science at <a href="https://sumdu.edu.ua/int/en/" class="text-bold">Sumy State University</a>, 2012
-        </div>
-      </div>
-
-      <div class="TimelineItem">
-        <div class="TimelineItem-badge">
-        </div>
-        <div class="TimelineItem-body">
-          Junior Specialist, Service of computer and intellectual systems and networks <br> at <a href="https://kpt.sumdu.edu.ua" class="text-bold">Polytechnic College of Konotop Institute of the SSU</a>, 2009
-        </div>
-      </div>
-
-      <div class="TimelineItem-break ml-0"></div>
-    </div>
-
-    <div class="col-12 pt-3 mx-3">
-      <div class="Subhead-heading pb-1">Contacts</div>
-      <div class="ml-3">
-        <ul>
-        <li>LinkedIn <a href="https://www.linkedin.com/in/yurivoevodin/">yurivoevodin</a></li>
-        <li>Upwork <a href="https://www.upwork.com/freelancers/~01f49c60721b71f48b">Yura V.</a></li>
-        <li>Twitter <a href="https://twitter.com/voevodin_yura">@voevodin_yura</a></li>
-        <li>Instagram <a href="https://www.instagram.com/voevodin.yura/">@voevodin.yura</a></li>
-        <li>Facebook <a href="https://www.facebook.com/yura.voevodin">yura.voevodin</a></li>
-        <li>Telegram <a href="https://t.me/voevodin_yura">@voevodin_yura</a></li>
-        <li>Github <a href="https://github.com/yura-voevodin">yura-voevodin</a></li>
-        <li>Mail me <a href="mailto:voevodin.yura@icloud.com">voevodin.yura@icloud.com</a></li>
-      </ul>
-      </div>
-    </div>
-  </div>
+    <%= render "layouts/footer" %>
 </div>
 
-<%= render "layouts/footer" %>
+
