New homepage on English and Ukrainian

--- a/app/views/about.html.erb
+++ b/app/views/about.html.erb
@@ -1,3 +1,17 @@
+<!-- #### Hi!
+
+I'm Yura Voevodin, from [Sumy, Ukraine][ukraine]. And I'm glad that you took a time to visit this website.
+
+I'm working as _Software Engineer_ and writing code on Swift, mainly building an iOS applications.
+
+Also I'm using [Ruby On Rails][ruby-on-rail] framework and [Python][python] programming language on my [own projects](#).
+
+Feel free to ask me any questions and follow me on social media. 
+
+Oriented on building a products 
+
+-->
+
 <div class="container py-4">
     <div class="mx-3 my-3">
 
