--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,8 @@
 <div class="container">
   <header class="d-flex justify-content-center py-3">
     <ul class="nav nav-pills">
-      <li class="nav-item">
-	    <%= link_to(root_url, class: "nav-link active") do %>
-		Home
-	    <% end %>
-	  </li>
-      <li class="nav-item"><a href="/projects" class="nav-link">Projects</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        <li class="nav-item"><%= link_to "Home", root_url, class: "nav-link #{ is_active('main')}" %></li>
+        <li class="nav-item"><%= link_to "About", "about", class: "nav-link #{ is_active('about')}" %></li>
     </ul>
-  </header>
+</header>
 </div>
