--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,19 +1,14 @@
-<!-- #### Hi!
+<% @title = "Yura Voevodin - About Me" %>
+<%= render "layouts/header" %>
 
-I'm Yura Voevodin, from [Sumy, Ukraine][ukraine]. And I'm glad that you took a time to visit this website.
-
-I'm working as _Software Engineer_ and writing code on Swift, mainly building an iOS applications.
-
-Also I'm using [Ruby On Rails][ruby-on-rail] framework and [Python][python] programming language on my [own projects](#).
-
-Feel free to ask me any questions and follow me on social media. 
-
-Oriented on building a products 
-
--->
+<div class="col-lg-8 mx-auto p-3 py-md-5">
+<%= markdown(@markdown_text)  %>  
+</div>
 
 <div class="container py-4">
     <div class="mx-3 my-3">
+
+
 
         <div class="col-12 pt-3 mx-3">
             <div class="Subhead-heading pb-1">Experience</div>
